<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@drawable/bg_gs_tower"
    tools:context=".AcMain"  >

  <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/radio_bg" 
        >
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="#000000"
            android:text="大朗货场"
            android:textSize="26sp" />
        
        <TextView
            android:id="@+id/textView2"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="#000000"
            android:text="综合指挥系统"
            android:textSize="26sp"/>

        <ImageView
            android:id="@+id/faceImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_alignTop="@+id/eTUser"
            android:background="@drawable/login_head" 
           />

        <EditText
            android:id="@+id/eTUser"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_marginBottom="5.0px"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="5.0dip"
            android:layout_marginTop="10.0dip"
            android:layout_toRightOf="@+id/faceImg"
            android:background="@drawable/edit_login"
            android:hint="工号"
            android:inputType="number"
            android:textColor="@color/black"
            android:paddingLeft="70.0dp" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/eTUser"
            android:layout_alignLeft="@+id/eTUser"
            android:layout_alignTop="@+id/eTUser"
            android:layout_marginRight="35.0sp"
            android:gravity="center_vertical"
            android:paddingLeft="7.0sp"
            android:text="用户"
            android:textColor="#ff3f3f3f"
            android:textSize="20.0sp" />

        <EditText
            android:id="@+id/eTPasswod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/eTUser"
            android:layout_alignRight="@+id/eTUser"
            android:layout_below="@+id/eTUser"
            android:layout_marginRight="1.0dip"
           
            android:background="@drawable/edit_login"
            android:inputType="numberPassword"
            android:maxLength="16"
           
            android:paddingLeft="70.0dp"
            android:textColor="@color/black"
            android:saveEnabled="true" />
        
        <ImageButton
            android:id="@+id/imgbtn_delete"
            android:src="@drawable/delete2"
            android:background="#00000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/eTUser"
            android:layout_alignRight="@+id/eTUser"
            android:layout_alignTop="@+id/eTUser" 
            android:paddingRight="10dp"/>

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/eTPasswod"
            android:layout_alignRight="@+id/username"
            android:layout_alignTop="@+id/eTPasswod"
            android:gravity="center_vertical"
            android:paddingLeft="7.0dp"
            android:text="密码"
            android:textColor="#ff3f3f3f"
            android:textSize="20.0sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/faceImg"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/password"
            android:layout_marginRight="12.0dip"
            android:layout_marginTop="20.0dp"
            android:background="@drawable/button_blue"
            android:text="登陆"
            android:textColor="#ffffff"
            android:textSize="20.0dp" />
        
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/faceImg"
            android:layout_below="@+id/btnLogin"
            android:layout_alignParentRight="true"
            android:layout_marginRight="12.0dip"
            android:layout_marginTop="10.0dp"
            android:background="@drawable/button_blue"
            android:text="取消"
            android:textColor="#ffffff"
            android:textSize="20.0dp" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnCancel"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10.0dp"
            android:button="@drawable/btn_check"
            android:text="离线模式"
            android:textColor="#ff222222"
            android:textSize="16.0sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="10dp"
        android:text=""
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <byxx.android.huochang.LoginSlidingDrawer 
        android:id="@+id/slidingdrawer"
        android:layout_width="match_parent"
	 	android:layout_height="wrap_content"
	 	android:handle="@+id/handle"
	  	android:content="@+id/content"
	  	android:orientation="vertical"
	  	android:layout_alignParentBottom="true"
	  	>
	  	
	    <Button 
	        android:id="@id/handle"
	        android:layout_width="match_parent"
	        android:layout_height="20dp"
	        android:background="@drawable/btn_style"
	        />
	
		<LinearLayout
		    android:id="@id/content"
		    android:clickable="true"
			android:layout_width="match_parent" 
			android:layout_height="wrap_content"
			android:background="@drawable/radio_bg"
			android:orientation="vertical">
						
		    <TextView 
		   		android:textSize="18sp"
		  		android:textColor="#000000"
		   		android:layout_width="wrap_content" 
		   		android:layout_height="wrap_content"
		   		android:textStyle="bold"
		   		android:gravity="left"
		   		android:text="@string/pingTitle" >
		        
		    </TextView>
		    
		    <TextView
		        android:id="@+id/pingInfo"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#000000"
		        android:textSize="16sp"
		        android:textStyle="bold" 
		        android:gravity="left"
		        android:text="@string/pingInfo" >
		        
		    </TextView>
		    
		    <Button
		        android:id="@+id/pingButton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:background="@drawable/btn_style"
		        android:text="@string/pingButton" />
		    
		    <TextView 
		   		android:textSize="18sp"
		  		android:textColor="#000000"
		  		android:gravity="left"
		   		android:layout_width="wrap_content" 
		   		android:layout_height="wrap_content"
		   		android:textStyle="bold"
		   		android:text="@string/networkTitle" >
		        
		    </TextView>
		    
		    <TextView 
		  		android:id="@+id/networkInfo"
		   		android:textSize="16sp"
		  		android:textColor="#000000"
		  		android:gravity="left"
		   		android:layout_width="wrap_content" 
		   		android:layout_height="wrap_content"
		   		android:textStyle="bold"
		   		android:text="@string/networkInfo" >
		        
		    </TextView>
		    
		    <Button
		        android:id="@+id/networkButton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:background="@drawable/btn_style"
		        android:text="@string/networkButton" />
		

		    <TextView
		        android:id="@+id/timeInfo"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="16sp"
		  		android:textColor="#000000"
		  		android:textStyle="bold"
		  		android:gravity="left"
		  		android:text="@string/timeInfo"
		        >
		    </TextView>
		    
		    <Button
		        android:id="@+id/timeButton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:background="@drawable/btn_style"
		        android:text="@string/timeButton"
		        >
		    </Button>
		    
		</LinearLayout>
 	</byxx.android.huochang.LoginSlidingDrawer >

</RelativeLayout>
